[package]
name = "browser-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "browser-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
base64 = "0.22"
url = "2"

[profile.release]
opt-level = "s"
lto = true
strip = true
